--- a/output/authors.html
+++ b/output/authors.html
@@ -23,6 +23,8 @@
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
+  <link rel="shortcut icon" href="mariage-rosalie-benoit/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="mariage-rosalie-benoit/images/favicon.ico" type="image/x-icon">
 
 
 
@@ -32,14 +34,14 @@
 
     <meta name="author" content="Benoit Boyadjis" />
     <meta name="description" content="" />
-  <meta property="og:site_name" content="Mariage Rosalie et Benoit"/>
+  <meta property="og:site_name" content="Mariage Rosalie et Benoît"/>
   <meta property="og:type" content="blog"/>
-  <meta property="og:title" content="Mariage Rosalie et Benoit"/>
+  <meta property="og:title" content="Mariage Rosalie et Benoît"/>
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content=""/>
 
-  <title>Mariage Rosalie et Benoit &ndash; Authors</title>
+  <title>Mariage Rosalie et Benoît &ndash; Authors</title>
 
 
 </head>
@@ -48,11 +50,11 @@
 <aside>
   <div>
     <a href="/">
-      <img src="/theme/img/photo_1_bis.jpg" alt="Mariage Rosalie et Benoit" title="Mariage Rosalie et Benoit">
+      <img src="/theme/img/photo_1_bis.jpg" alt="Mariage Rosalie et Benoît" title="Mariage Rosalie et Benoît">
     </a>
 
     <h1>
-      <a href="/">Mariage Rosalie et Benoit</a>
+      <a href="/">Mariage Rosalie et Benoît</a>
     </h1>
 
     <p>Paris, 20 Juillet 2024</p>
@@ -99,7 +101,7 @@
   </header>
   <div>
     <ul class="list">
-      <li><a href="/author/benoit-boyadjis.html">Benoit Boyadjis</a> (5)</li>
+      <li><a href="/author/benoit-boyadjis.html">Benoit Boyadjis</a> (6)</li>
     </ul>
   </div>
 </article>
@@ -110,7 +112,7 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " Mariage Rosalie et Benoit ",
+  "name": " Mariage Rosalie et Benoît ",
   "url" : "",
   "image": "",
   "description": ""
