--- a/output/faq-de.html
+++ b/output/faq-de.html
@@ -23,6 +23,8 @@
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
+  <link rel="shortcut icon" href="mariage-rosalie-benoit/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="mariage-rosalie-benoit/images/favicon.ico" type="image/x-icon">
 
 
 
@@ -37,7 +39,7 @@
 <link rel="alternate" href="/faq-de.html" hreflang="de" />
 <link rel="alternate" href="/faq.html" hreflang="fr" />
 
-  <meta property="og:site_name" content="Mariage Rosalie et Benoit"/>
+  <meta property="og:site_name" content="Mariage Rosalie et Benoît"/>
   <meta property="og:title" content="Häufig gestellte Fragen"/>
   <meta property="og:description" content="Wenn Sie Fragen haben, die Sie uns senden möchten, zögern Sie nicht, dies zu tun. Wir werden diese Seite entsprechend bereichern. Ist ein Thema für die Hochzeit geplant? Nein, kein bestimmtes Thema! Brauche ich ein Auto? Nein, alle Reisen sind ohne Fahrzeug möglich. Auch mit öffentlichen Verkehrsmitteln sind die Orte …"/>
   <meta property="og:locale" content="en_US"/>
@@ -49,7 +51,7 @@
   <meta property="article:section" content="misc"/>
   <meta property="og:image" content="">
 
-  <title>Mariage Rosalie et Benoit &ndash; Häufig gestellte Fragen</title>
+  <title>Mariage Rosalie et Benoît &ndash; Häufig gestellte Fragen</title>
 
 
 </head>
@@ -58,11 +60,11 @@
 <aside>
   <div>
     <a href="/">
-      <img src="/theme/img/photo_1_bis.jpg" alt="Mariage Rosalie et Benoit" title="Mariage Rosalie et Benoit">
+      <img src="/theme/img/photo_1_bis.jpg" alt="Mariage Rosalie et Benoît" title="Mariage Rosalie et Benoît">
     </a>
 
     <h1>
-      <a href="/">Mariage Rosalie et Benoit</a>
+      <a href="/">Mariage Rosalie et Benoît</a>
     </h1>
 
     <p>Paris, 20 Juillet 2024</p>
@@ -154,7 +156,7 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " Mariage Rosalie et Benoit ",
+  "name": " Mariage Rosalie et Benoît ",
   "url" : "",
   "image": "",
   "description": ""
