--- a/output/faq.html
+++ b/output/faq.html
@@ -23,6 +23,8 @@
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
+  <link rel="shortcut icon" href="mariage-rosalie-benoit/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="mariage-rosalie-benoit/images/favicon.ico" type="image/x-icon">
 
 
 
@@ -31,15 +33,15 @@
  
 
 <meta name="author" content="Benoit Boyadjis" />
-<meta name="description" content="Si vous avez des interrogations à nous faire remonter, n&#39;hésitez pas à le faire et nous enrichirons cette page en conséquence. Un thème est-il prévu pour le mariage ? Non, pas de thème particulier ! Ai-je besoin d&#39;une voiture ? Non, tous les déplacements sont possibles sans véhicule. Les lieux sont par ailleurs …" />
+<meta name="description" content="N&#39;hésitez pas à nous remonter toute interrogation ou demande spécifique, nous enrichirons cette page en conséquence ! Un thème est-il prévu pour le mariage ? Non, pas de thème particulier ! Ai-je besoin d&#39;une voiture ? Non, tous les déplacements sont possibles sans véhicule. Les lieux sont par ailleurs faciles d&#39;accès en transports en …" />
 <meta name="keywords" content="">
 
 <link rel="alternate" href="/faq.html" hreflang="fr" />
 <link rel="alternate" href="/faq-de.html" hreflang="de" />
 
-  <meta property="og:site_name" content="Mariage Rosalie et Benoit"/>
+  <meta property="og:site_name" content="Mariage Rosalie et Benoît"/>
   <meta property="og:title" content="FAQ"/>
-  <meta property="og:description" content="Si vous avez des interrogations à nous faire remonter, n&#39;hésitez pas à le faire et nous enrichirons cette page en conséquence. Un thème est-il prévu pour le mariage ? Non, pas de thème particulier ! Ai-je besoin d&#39;une voiture ? Non, tous les déplacements sont possibles sans véhicule. Les lieux sont par ailleurs …"/>
+  <meta property="og:description" content="N&#39;hésitez pas à nous remonter toute interrogation ou demande spécifique, nous enrichirons cette page en conséquence ! Un thème est-il prévu pour le mariage ? Non, pas de thème particulier ! Ai-je besoin d&#39;une voiture ? Non, tous les déplacements sont possibles sans véhicule. Les lieux sont par ailleurs faciles d&#39;accès en transports en …"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content="/faq.html"/>
   <meta property="og:type" content="article"/>
@@ -49,7 +51,7 @@
   <meta property="article:section" content="misc"/>
   <meta property="og:image" content="">
 
-  <title>Mariage Rosalie et Benoit &ndash; FAQ</title>
+  <title>Mariage Rosalie et Benoît &ndash; FAQ</title>
 
 
 </head>
@@ -58,11 +60,11 @@
 <aside>
   <div>
     <a href="/">
-      <img src="/theme/img/photo_1_bis.jpg" alt="Mariage Rosalie et Benoit" title="Mariage Rosalie et Benoit">
+      <img src="/theme/img/photo_1_bis.jpg" alt="Mariage Rosalie et Benoît" title="Mariage Rosalie et Benoît">
     </a>
 
     <h1>
-      <a href="/">Mariage Rosalie et Benoit</a>
+      <a href="/">Mariage Rosalie et Benoît</a>
     </h1>
 
     <p>Paris, 20 Juillet 2024</p>
@@ -118,17 +120,17 @@
 
   <div style="padding-top: 12px; padding-bottom: 12px; text-align: justify;">
     <blockquote>
-<p>Si vous avez des interrogations à nous faire remonter, n'hésitez pas à le faire et nous enrichirons cette page en conséquence.</p>
+<p>N'hésitez pas à nous remonter toute interrogation ou demande spécifique, nous enrichirons cette page en conséquence !</p>
 </blockquote>
 <h2>Un thème est-il prévu pour le mariage ?</h2>
 <p>Non, pas de thème particulier !</p>
 <h2>Ai-je besoin d'une voiture ?</h2>
-<p>Non, tous les déplacements sont possibles sans véhicule. Les lieux sont par ailleurs faciles d'accès en transport en commun.</p>
+<p>Non, tous les déplacements sont possibles sans véhicule. Les lieux sont par ailleurs faciles d'accès en transports en commun.</p>
 <h2>Des babysitters sont-ils prévus le samedi soir ?</h2>
 <p>Malheureusement non, nous vous demandons d'être autonome pour la garde des enfants !</p>
 <h2>Suis-je invité le dimanche ?</h2>
 <p>Oui, tout le monde est invité à participer au brunch du dimanche !</p>
-<h2>D'ailleurs, que se passe-t-il si il pleut dimanche ?</h2>
+<h2>D'ailleurs, que se passe-t-il s'il pleut dimanche ?</h2>
 <p>Très bonne question !</p>
   </div>
   <style>
@@ -154,7 +156,7 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " Mariage Rosalie et Benoit ",
+  "name": " Mariage Rosalie et Benoît ",
   "url" : "",
   "image": "",
   "description": ""
