--- a/output/liste-mariage-de.html
+++ b/output/liste-mariage-de.html
@@ -23,6 +23,8 @@
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
+  <link rel="shortcut icon" href="mariage-rosalie-benoit/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="mariage-rosalie-benoit/images/favicon.ico" type="image/x-icon">
 
 
 
@@ -37,7 +39,7 @@
 <link rel="alternate" href="/liste-mariage-de.html" hreflang="de" />
 <link rel="alternate" href="/liste-mariage.html" hreflang="fr" />
 
-  <meta property="og:site_name" content="Mariage Rosalie et Benoit"/>
+  <meta property="og:site_name" content="Mariage Rosalie et Benoît"/>
   <meta property="og:title" content="Hochzeitsliste"/>
   <meta property="og:description" content="Wir laden Sie ein, uns bei unseren zukünftigen Projekten durch diese Hochzeitsliste zu unterstützen, in der wir Geschenkoptionen auflisten, die uns begeistern würden. Der Einfachheit halber möchten wir Ihnen nachfolgend unsere Bankverbindung hinterlassen, damit Sie eine Überweisung ganz nach Ihren Wünschen durchführen können. Zögern Sie nicht, die Spende anzugeben, zu …"/>
   <meta property="og:locale" content="en_US"/>
@@ -49,7 +51,7 @@
   <meta property="article:section" content="misc"/>
   <meta property="og:image" content="">
 
-  <title>Mariage Rosalie et Benoit &ndash; Hochzeitsliste</title>
+  <title>Mariage Rosalie et Benoît &ndash; Hochzeitsliste</title>
 
 
 </head>
@@ -58,11 +60,11 @@
 <aside>
   <div>
     <a href="/">
-      <img src="/theme/img/photo_1_bis.jpg" alt="Mariage Rosalie et Benoit" title="Mariage Rosalie et Benoit">
+      <img src="/theme/img/photo_1_bis.jpg" alt="Mariage Rosalie et Benoît" title="Mariage Rosalie et Benoît">
     </a>
 
     <h1>
-      <a href="/">Mariage Rosalie et Benoit</a>
+      <a href="/">Mariage Rosalie et Benoît</a>
     </h1>
 
     <p>Paris, 20 Juillet 2024</p>
@@ -159,7 +161,7 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " Mariage Rosalie et Benoit ",
+  "name": " Mariage Rosalie et Benoît ",
   "url" : "",
   "image": "",
   "description": ""
