--- a/output/liste-mariage.html
+++ b/output/liste-mariage.html
@@ -23,6 +23,8 @@
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
+  <link rel="shortcut icon" href="mariage-rosalie-benoit/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="mariage-rosalie-benoit/images/favicon.ico" type="image/x-icon">
 
 
 
@@ -37,7 +39,7 @@
 <link rel="alternate" href="/liste-mariage.html" hreflang="fr" />
 <link rel="alternate" href="/liste-mariage-de.html" hreflang="de" />
 
-  <meta property="og:site_name" content="Mariage Rosalie et Benoit"/>
+  <meta property="og:site_name" content="Mariage Rosalie et Benoît"/>
   <meta property="og:title" content="Liste de Mariage"/>
   <meta property="og:description" content="Nous vous proposons de nous accompagner dans nos projets futurs à travers cette liste de mariage, où nous listons des options de cadeaux qui nous raviraient. Pour des raisons de simplicité, nous nous permettons de vous laisser nos coordonnées bancaires ci-après, afin que vous puissiez réaliser un virement selon votre …"/>
   <meta property="og:locale" content="en_US"/>
@@ -49,7 +51,7 @@
   <meta property="article:section" content="misc"/>
   <meta property="og:image" content="">
 
-  <title>Mariage Rosalie et Benoit &ndash; Liste de Mariage</title>
+  <title>Mariage Rosalie et Benoît &ndash; Liste de Mariage</title>
 
 
 </head>
@@ -58,11 +60,11 @@
 <aside>
   <div>
     <a href="/">
-      <img src="/theme/img/photo_1_bis.jpg" alt="Mariage Rosalie et Benoit" title="Mariage Rosalie et Benoit">
+      <img src="/theme/img/photo_1_bis.jpg" alt="Mariage Rosalie et Benoît" title="Mariage Rosalie et Benoît">
     </a>
 
     <h1>
-      <a href="/">Mariage Rosalie et Benoit</a>
+      <a href="/">Mariage Rosalie et Benoît</a>
     </h1>
 
     <p>Paris, 20 Juillet 2024</p>
@@ -127,13 +129,13 @@
 <p>Bouquet final de notre mariage, nous prévoyons une semaine (sans Joséphine !) dans le nord de l'Italie. Road trip, plages, gastronomie, soleil, nous ésperons que tous les ingrédients seront au rendez-vous pour une lune de miel enchantée !</p>
 <p><img alt="italie" src="images/photo_5.jpg"></p>
 <h3>Paire d'enceintes Hi-Fi Raven Héritage</h3>
-<p>Cadeau pour Joséphine plus que pour nous-même, nous souhaitons nous équiper d'un système de son de grande qualité proposé par la Maison du Haut-Parleur. Il est important d'éduquer les oreilles de notre petit chou dès son plus jeune âge !</p>
+<p>Cadeau pour Joséphine plus que pour nous-même, nous souhaitons nous équiper d'un système de son de qualité proposé par la Maison du Haut-Parleur. Il est important d'éduquer les oreilles de notre petit chou dès son plus jeune âge !</p>
 <p><img alt="italie" src="images/photo_7.jpg"></p>
 <h3>Oeuvre d'art Galerie SETZE / LEPARTKING</h3>
 <p>Rosalie a un coup de coeur pour l'ambiance et le style de la galerie où nous organisons la réception. Si l'oeuvre n'a pas encore été choisie, nous souhaiterions garder une trace de cette journée unique du mariage à travers une pièce de leur catalogue.</p>
 <p><img alt="chat" src="images/photo_8.jpeg"></p>
 <h3>VDI Jazz (Voyage à Durée Indéterminée)</h3>
-<p>Sur un registre un peu différent, nous nous proposons d'envoyer Jazz en vacances quelques temps, afin de profiter d'une courte période sans croquettes et litière à la maison. (PS: c'est une blague, bien entendu)</p>
+<p>Sur un autre registre, nous nous proposons d'envoyer Jazz en vacances quelques temps. Une semaine de Club Med Croquettes pour un calme total à la maison !</p>
 <p><img alt="chat" src="images/photo_6.jpeg"></p>
   </div>
   <style>
@@ -159,7 +161,7 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " Mariage Rosalie et Benoit ",
+  "name": " Mariage Rosalie et Benoît ",
   "url" : "",
   "image": "",
   "description": ""
