--- a/output/contacts.html
+++ b/output/contacts.html
@@ -23,6 +23,8 @@
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
+  <link rel="shortcut icon" href="mariage-rosalie-benoit/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="mariage-rosalie-benoit/images/favicon.ico" type="image/x-icon">
 
 
 
@@ -37,7 +39,7 @@
 <link rel="alternate" href="/contacts.html" hreflang="fr" />
 <link rel="alternate" href="/contacts-de.html" hreflang="de" />
 
-  <meta property="og:site_name" content="Mariage Rosalie et Benoit"/>
+  <meta property="og:site_name" content="Mariage Rosalie et Benoît"/>
   <meta property="og:title" content="Contacts"/>
   <meta property="og:description" content="Les Mariés On évite de les déranger le jour J ! Nom Téléphone Email Rosalie Scholz (+33)6 66 22 62 05 rosalie.scholz@hotmail.com Benoit Boyadjis (+33)6 49 84 07 26 benoitboyadjis@gmail.com Les Témoins Nom Téléphone Email Pierre-Michel Comparon (+33)6 31 45 19 37 pmc004 …"/>
   <meta property="og:locale" content="en_US"/>
@@ -49,7 +51,7 @@
   <meta property="article:section" content="misc"/>
   <meta property="og:image" content="">
 
-  <title>Mariage Rosalie et Benoit &ndash; Contacts</title>
+  <title>Mariage Rosalie et Benoît &ndash; Contacts</title>
 
 
 </head>
@@ -58,11 +60,11 @@
 <aside>
   <div>
     <a href="/">
-      <img src="/theme/img/photo_1_bis.jpg" alt="Mariage Rosalie et Benoit" title="Mariage Rosalie et Benoit">
+      <img src="/theme/img/photo_1_bis.jpg" alt="Mariage Rosalie et Benoît" title="Mariage Rosalie et Benoît">
     </a>
 
     <h1>
-      <a href="/">Mariage Rosalie et Benoit</a>
+      <a href="/">Mariage Rosalie et Benoît</a>
     </h1>
 
     <p>Paris, 20 Juillet 2024</p>
@@ -163,13 +165,13 @@
 <td>nicolas.boyadjis@gmail.com</td>
 </tr>
 <tr>
-<td>-</td>
-<td>-</td>
+<td>Hannah Amalric</td>
+<td>(+33)6 15 63 38 40</td>
 <td>-</td>
 </tr>
 <tr>
-<td>-</td>
-<td>-</td>
+<td>Nanni Longobardo</td>
+<td>(+41) 78 259 76 43</td>
 <td>-</td>
 </tr>
 </tbody>
@@ -253,7 +255,7 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " Mariage Rosalie et Benoit ",
+  "name": " Mariage Rosalie et Benoît ",
   "url" : "",
   "image": "",
   "description": ""
