--- a/output/programme-dimanche-de.html
+++ b/output/programme-dimanche-de.html
@@ -23,6 +23,8 @@
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
+  <link rel="shortcut icon" href="mariage-rosalie-benoit/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="mariage-rosalie-benoit/images/favicon.ico" type="image/x-icon">
 
 
 
@@ -37,7 +39,7 @@
 <link rel="alternate" href="/programme-dimanche-de.html" hreflang="de" />
 <link rel="alternate" href="/programme-dimanche.html" hreflang="fr" />
 
-  <meta property="og:site_name" content="Mariage Rosalie et Benoit"/>
+  <meta property="og:site_name" content="Mariage Rosalie et Benoît"/>
   <meta property="og:title" content="Sonntagsprogramm"/>
   <meta property="og:description" content="Festlicher Brunch in Buttes-Chaumont – 11 Uhr Wir lassen das Wochenende mit einem Brunch für alle ausklingen, um uns von den Exzessen des Vortages zu erholen. Wir laden Sie ein, uns ab 11 Uhr am Wasserfall (Karte) zu treffen! Zögern Sie nicht, ein paar Getränke mitzubringen und/oder uns mit Ihren …"/>
   <meta property="og:locale" content="en_US"/>
@@ -49,7 +51,7 @@
   <meta property="article:section" content="misc"/>
   <meta property="og:image" content="">
 
-  <title>Mariage Rosalie et Benoit &ndash; Sonntagsprogramm</title>
+  <title>Mariage Rosalie et Benoît &ndash; Sonntagsprogramm</title>
 
 
 </head>
@@ -58,11 +60,11 @@
 <aside>
   <div>
     <a href="/">
-      <img src="/theme/img/photo_1_bis.jpg" alt="Mariage Rosalie et Benoit" title="Mariage Rosalie et Benoit">
+      <img src="/theme/img/photo_1_bis.jpg" alt="Mariage Rosalie et Benoît" title="Mariage Rosalie et Benoît">
     </a>
 
     <h1>
-      <a href="/">Mariage Rosalie et Benoit</a>
+      <a href="/">Mariage Rosalie et Benoît</a>
     </h1>
 
     <p>Paris, 20 Juillet 2024</p>
@@ -146,7 +148,7 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " Mariage Rosalie et Benoit ",
+  "name": " Mariage Rosalie et Benoît ",
   "url" : "",
   "image": "",
   "description": ""
