--- a/output/programme-samedi-2-de.html
+++ b/output/programme-samedi-2-de.html
@@ -33,17 +33,17 @@
  
 
 <meta name="author" content="Benoit Boyadjis" />
-<meta name="description" content="Programme Heure Lieu Cérémonie religieuse 15h30 Saint Jean-Baptiste de Belleville139 Rue de Belleville, 75019 Paris (map) Shooting photo(mariés) 17h Parc des Buttes-Chaumont75019 Paris Réception 18h Galerie SETZE / LEPARTKING36 rue Miguel Hidalgo, 75019 Paris (map) Cérémonie religieuse - 15h30 A l&#39;église Saint Jean-Baptiste de Belleville, 139 Rue de …" />
+<meta name="description" content="Programme Heure Lieu Standesamtliche Trauung 10h15 Mairie du XIXe arrondissement de Paris5-7 Place Armand Carrel, 75019 Paris (map) Restaurant 12h30 Buono Sano Bello14 Rue de la Villette, 75019 Paris (map) Religiöse Zeremonie 15h30 Saint Jean-Baptiste de Belleville139 Rue de Belleville, 75019 Paris (map) Fotoshooting(Brautpaar) 17h Parc …" />
 <meta name="keywords" content="">
 
-<link rel="alternate" href="/programme-samedi.html" hreflang="fr" />
-<link rel="alternate" href="/programme-samedi-de.html" hreflang="de" />
+<link rel="alternate" href="/programme-samedi-2-de.html" hreflang="de" />
+<link rel="alternate" href="/programme-samedi-2.html" hreflang="fr" />
 
   <meta property="og:site_name" content="Mariage Rosalie et Benoît"/>
   <meta property="og:title" content="Programme du Samedi"/>
-  <meta property="og:description" content="Programme Heure Lieu Cérémonie religieuse 15h30 Saint Jean-Baptiste de Belleville139 Rue de Belleville, 75019 Paris (map) Shooting photo(mariés) 17h Parc des Buttes-Chaumont75019 Paris Réception 18h Galerie SETZE / LEPARTKING36 rue Miguel Hidalgo, 75019 Paris (map) Cérémonie religieuse - 15h30 A l&#39;église Saint Jean-Baptiste de Belleville, 139 Rue de …"/>
+  <meta property="og:description" content="Programme Heure Lieu Standesamtliche Trauung 10h15 Mairie du XIXe arrondissement de Paris5-7 Place Armand Carrel, 75019 Paris (map) Restaurant 12h30 Buono Sano Bello14 Rue de la Villette, 75019 Paris (map) Religiöse Zeremonie 15h30 Saint Jean-Baptiste de Belleville139 Rue de Belleville, 75019 Paris (map) Fotoshooting(Brautpaar) 17h Parc …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="/programme-samedi.html"/>
+  <meta property="og:url" content="/programme-samedi-2-de.html"/>
   <meta property="og:type" content="article"/>
   <meta property="article:published_time" content="2010-12-04 10:20:00+01:00"/>
   <meta property="article:modified_time" content=""/>
@@ -108,11 +108,11 @@
 <article class="single">
   <header>
           <div class="translations">
-    <a class="active" href="/programme-samedi.html">fr</a>
-        <a href="/programme-samedi-de.html">de</a>
+    <a class="active" href="/programme-samedi-2-de.html">de</a>
+        <a href="/programme-samedi-2.html">fr</a>
     </div>
 
-    <h1 id="programme-samedi">Programme du Samedi</h1>
+    <h1 id="programme-samedi-2">Programme du Samedi</h1>
     <p>
     </p>
   </header>
@@ -129,17 +129,27 @@
 </thead>
 <tbody>
 <tr>
-<td>Cérémonie religieuse</td>
+<td>Standesamtliche Trauung</td>
+<td>10h15</td>
+<td>Mairie du XIXe arrondissement de Paris<br/>5-7 Place Armand Carrel, 75019 Paris (<a href="https://www.google.com/maps/place/Mairie+du+19e+arrondissement/@48.8829193,2.3794076,17z/data=!3m1!4b1!4m6!3m5!1s0x47e66ddaa2400b67:0x334473c7ba88933d!8m2!3d48.8829193!4d2.3819825!16s%2Fg%2F12338f7b?entry=ttu">map</a>)</td>
+</tr>
+<tr>
+<td>Restaurant</td>
+<td>12h30</td>
+<td>Buono Sano Bello<br/>14 Rue de la Villette, 75019 Paris (<a href="https://www.google.com/maps/place/Buono+Sano+Bello/@48.8754328,2.3849506,17z/data=!3m1!4b1!4m6!3m5!1s0x47e66dea77d8a3fd:0xc7a005a73cbc9e5b!8m2!3d48.8754328!4d2.3875255!16s%2Fg%2F11b6d0lt4v?entry=ttu">map</a>)</td>
+</tr>
+<tr>
+<td>Religiöse Zeremonie</td>
 <td>15h30</td>
 <td>Saint Jean-Baptiste de Belleville<br/>139 Rue de Belleville, 75019 Paris (<a href="https://www.google.com/maps/place/%C3%89glise+Saint-Jean-Baptiste+de+Belleville/@48.8756903,2.3867071,17z/data=!3m1!4b1!4m6!3m5!1s0x47e66dea9e35b2c7:0x80f4e2e8e5fd9ca1!8m2!3d48.8756903!4d2.389282!16s%2Fg%2F120vzky8?entry=ttu">map</a>)</td>
 </tr>
 <tr>
-<td>Shooting photo<br/>(mariés)</td>
+<td>Fotoshooting<br/>(Brautpaar)</td>
 <td>17h</td>
-<td>Parc des Buttes-Chaumont<br/>75019 Paris</td>
+<td>Parc des Buttes-Chaumont<br/>75019 Paris (<a href="https://www.google.com/maps/place/Parc+des+Buttes-Chaumont/@48.8809496,2.380186,17z/data=!3m1!4b1!4m6!3m5!1s0x47e66dc6143ed387:0xf26bed6076959491!8m2!3d48.8809496!4d2.3827609!16zL20vMDVodzM1?entry=ttu">map</a>)</td>
 </tr>
 <tr>
-<td>Réception</td>
+<td>Empfang</td>
 <td>18h</td>
 <td>Galerie SETZE / LEPARTKING<br/>36 rue Miguel Hidalgo, 75019 Paris (<a href="https://www.google.com/maps/place/36+Rue+Miguel+Hidalgo,+75019+Paris/@48.8815654,2.3889276,17z/data=!3m1!4b1!4m6!3m5!1s0x47e66dc75f99238f:0x70580508f1d9bc96!8m2!3d48.8815654!4d2.3915025!16s%2Fg%2F11c29p3102?entry=ttu">map</a>)</td>
 </tr>
@@ -147,19 +157,29 @@
 </table>
 <p><br/>
 <br/></p>
-<h2>Cérémonie religieuse - 15h30</h2>
+<h2>Standesamtliche Trauung – 10:15 Uhr</h2>
 <blockquote>
-<p>A l'église Saint Jean-Baptiste de Belleville, 139 Rue de Belleville, 75019 Paris (<a href="https://www.google.com/maps/place/%C3%89glise+Saint-Jean-Baptiste+de+Belleville/@48.8756903,2.3867071,17z/data=!3m1!4b1!4m6!3m5!1s0x47e66dea9e35b2c7:0x80f4e2e8e5fd9ca1!8m2!3d48.8756903!4d2.389282!16s%2Fg%2F120vzky8?entry=ttu">map</a>)</p>
+<p>Im Trausaal des Rathauses des 19. Arrondissements von Paris, 5-7 Place Armand Carrel, 75019 Paris</p>
 </blockquote>
-<p>Nous vous attendons à deux pas de la station Jourdain (ligne 11) pour un des moments forts de la journée, notre union devant Dieu. </p>
-<h2>Shooting photo (mariés) - 17h</h2>
-<p>Parenthèse pour les mariés avec une session photo dans l'après-midi aux Buttes-Chaumont.</p>
-<h2>Réception - 18h</h2>
+<p>Wir beginnen den Tag im Beisein unserer nahen Familien mit der Bestätigung unserer Ehe vor dem französischen Staat. Versuchen Sie nach Möglichkeit, gegen 10:15 Uhr einzutreffen, um den Einlass zu erleichtern und uns die Möglichkeit zu geben, ein paar Fotos zu machen!</p>
+<h2>Restaurant - 12:30 Uhr</h2>
 <blockquote>
-<p>A la galerie d'art SETZE / LEPARTKING, 36 rue Miguel Hidalgo, 75019 Paris (<a href="https://www.google.com/maps/place/36+Rue+Miguel+Hidalgo,+75019+Paris/@48.8815654,2.3889276,17z/data=!3m1!4b1!4m6!3m5!1s0x47e66dc75f99238f:0x70580508f1d9bc96!8m2!3d48.8815654!4d2.3915025!16s%2Fg%2F11c29p3102?entry=ttu">map</a>)</p>
+<p>Bei Buono Sano Bello, 14 Rue de la Villette, 75019 Paris.</p>
 </blockquote>
-<p>La journée se terminera à la Galerie d'art SETZE / LEPARTKING, avec un cocktail dinatoire et une soirée dansante et endiablée. Entre autres animations, nous aurons l'immense chance d'exposer quelques oeuvres de la galerie, ainsi que certains travaux de notre chère amie artiste Toni Blue Caro !</p>
-<p><br/>
+<p>Italienische Küche zum Kraft tanken!</p>
+<h2>Religiöse Zeremonie – 15:30 Uhr</h2>
+<blockquote>
+<p>In der Kirche Saint Jean-Baptiste de Belleville, 139 Rue de Belleville, 75019 Paris</p>
+</blockquote>
+<p>Wir erwarten Sie nur einen Steinwurf vom Bahnhof Jourdain (Linie 11) entfernt zu einem der Höhepunkte des Tages, unserer Vereinigung vor Gott.</p>
+<h2>Fotoshooting (Brautpaar) – 17:00 Uhr</h2>
+<p>Eine Pause für Braut und Bräutigam mit einer Fotosession am Nachmittag in Buttes-Chaumont.</p>
+<h2>Empfang – 18:00 Uhr</h2>
+<blockquote>
+<p>In der Kunstgalerie SETZE / LEPARTKING, 36 rue Miguel Hidalgo, 75019 Paris</p>
+</blockquote>
+<p>Der Tag endet in der SETZE / LEPARTKING Art Gallery mit einem Cocktail-Dinner und einem wilden Tanzabend. Unter anderem werden wir die großartige Gelegenheit haben, einige Werke aus der Galerie sowie einige Werke unserer lieben Künstlerfreundin Toni Blue Caro auszustellen!
+<br/>
 <br/></p>
 <p><img alt="faire-part" src="images/photo_3.jpg"></p>
   </div>
