--- a/output/programme-samedi-de.html
+++ b/output/programme-samedi-de.html
@@ -23,6 +23,8 @@
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
+  <link rel="shortcut icon" href="mariage-rosalie-benoit/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="mariage-rosalie-benoit/images/favicon.ico" type="image/x-icon">
 
 
 
@@ -31,15 +33,15 @@
  
 
 <meta name="author" content="Benoit Boyadjis" />
-<meta name="description" content="Programm Zeit Ort Fotoshooting(Braut und Bräutigam) 9 Uhr Parc des Buttes-Chaumont75019 Paris (Karte) Standesamtliche Trauung(mit Familie) 10:30 Uhr Rathaus des 19. Arrondissement von Paris5-7 Place Armand Carrel, 75019 Paris (Karte) Restaurant(Familie) 12:30 Uhr Buono Sano Bello14 Rue de la Villette, 75019 Paris …" />
+<meta name="description" content="Programm Zeit Ort Religiöse Zeremonie 15:30 Uhr Saint Jean-Baptiste de Belleville139 Rue de Belleville, 75019 Paris (Karte) Fotoshooting(Brautpaar) 17 Uhr Parc des Buttes-Chaumont75019 Paris Empfang 18 Uhr Galerie SETZE / LEPARTKING36 rue Miguel Hidalgo, 75019 Paris (Karte) Religiöse Zeremonie – 15:30 Uhr In der Kirche Saint …" />
 <meta name="keywords" content="">
 
 <link rel="alternate" href="/programme-samedi-de.html" hreflang="de" />
 <link rel="alternate" href="/programme-samedi.html" hreflang="fr" />
 
-  <meta property="og:site_name" content="Mariage Rosalie et Benoit"/>
+  <meta property="og:site_name" content="Mariage Rosalie et Benoît"/>
   <meta property="og:title" content="Samstagsprogramm"/>
-  <meta property="og:description" content="Programm Zeit Ort Fotoshooting(Braut und Bräutigam) 9 Uhr Parc des Buttes-Chaumont75019 Paris (Karte) Standesamtliche Trauung(mit Familie) 10:30 Uhr Rathaus des 19. Arrondissement von Paris5-7 Place Armand Carrel, 75019 Paris (Karte) Restaurant(Familie) 12:30 Uhr Buono Sano Bello14 Rue de la Villette, 75019 Paris …"/>
+  <meta property="og:description" content="Programm Zeit Ort Religiöse Zeremonie 15:30 Uhr Saint Jean-Baptiste de Belleville139 Rue de Belleville, 75019 Paris (Karte) Fotoshooting(Brautpaar) 17 Uhr Parc des Buttes-Chaumont75019 Paris Empfang 18 Uhr Galerie SETZE / LEPARTKING36 rue Miguel Hidalgo, 75019 Paris (Karte) Religiöse Zeremonie – 15:30 Uhr In der Kirche Saint …"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content="/programme-samedi-de.html"/>
   <meta property="og:type" content="article"/>
@@ -49,7 +51,7 @@
   <meta property="article:section" content="misc"/>
   <meta property="og:image" content="">
 
-  <title>Mariage Rosalie et Benoit &ndash; Samstagsprogramm</title>
+  <title>Mariage Rosalie et Benoît &ndash; Samstagsprogramm</title>
 
 
 </head>
@@ -58,11 +60,11 @@
 <aside>
   <div>
     <a href="/">
-      <img src="/theme/img/photo_1_bis.jpg" alt="Mariage Rosalie et Benoit" title="Mariage Rosalie et Benoit">
+      <img src="/theme/img/photo_1_bis.jpg" alt="Mariage Rosalie et Benoît" title="Mariage Rosalie et Benoît">
     </a>
 
     <h1>
-      <a href="/">Mariage Rosalie et Benoit</a>
+      <a href="/">Mariage Rosalie et Benoît</a>
     </h1>
 
     <p>Paris, 20 Juillet 2024</p>
@@ -127,56 +129,34 @@
 </thead>
 <tbody>
 <tr>
-<td>Fotoshooting<br/>(Braut und Bräutigam)</td>
-<td>9 Uhr</td>
-<td>Parc des Buttes-Chaumont<br/>75019 Paris (<a href="https://www.google.com/maps/place/Parc+des+Buttes-Chaumont/@48.8809496,2.380186,17z/data=!3m1! 4b1!4m6!3m5!1s0x47e66dc6143ed387:0xf26bed6076959491!8m2!3d48.8809496!4d2.3827609!16zL20vMDVodzM1?entry=ttu">Karte</a>)</td>
-</tr>
-<tr>
-<td>Standesamtliche Trauung<br/>(mit Familie)</td>
-<td>10:30 Uhr</td>
-<td>Rathaus des 19. Arrondissement von Paris<br/>5-7 Place Armand Carrel, 75019 Paris (<a href="https://www.google.com/maps/place/Mairie+du+19e+arrondissement/@48.8829193 ,2.3794076 ,17z/data=!3m1!4b1!4m6!3m5!1s0x47e66ddaa2400b67:0x334473c7ba88933d!8m2!3d48.8829193!4d2.3819825!16s%2Fg%2F12338f7b? Eintrag=ttu">Karte</a>)</td>
-</tr>
-<tr>
-<td>Restaurant<br/>(Familie)</td>
-<td>12:30 Uhr</td>
-<td>Buono Sano Bello<br/>14 Rue de la Villette, 75019 Paris (<a href="https://www.google.com/maps/place/Buono+Sano+Bello/@48.8754328,2.3849506,17z/data=! 3m1!4b1!4m6!3m5!1s0x47e66dea77d8a3fd:0xc7a005a73cbc9e5b!8m2!3d48.8754328!4d2.3875255!16s%2Fg%2F11b6d0lt4v?entry=ttu">Karte</a>)</td>
-</tr>
-<tr>
-<td><strong>Religiöse Zeremonie</strong></td>
-<td><strong>15:30 Uhr</strong></td>
-<td><strong>Saint Jean-Baptiste de Belleville<br/>139 Rue de Belleville, 75019 Paris</strong> (<a href="https://www.google.com/maps/place/%C3%89glise+Saint-Jean-Baptiste +de+Belleville/@48.8756903,2.3867071,17z/data=!3m1!4b1!4m6!3m5!1s0x47e66dea9e35b2c7:0x80f4e2e8e5fd9ca1!8m2!3d48.8756903!4d2.389282!16s% 2Fg%2F120vzky8?entry=ttu">Karte</a>)</td>
+<td>Religiöse Zeremonie</td>
+<td>15:30 Uhr</td>
+<td>Saint Jean-Baptiste de Belleville<br/>139 Rue de Belleville, 75019 Paris (<a href="https://www.google.com/maps/place/%C3%89glise+Saint-Jean-Baptiste +de+Belleville/@48.8756903,2.3867071,17z/data=!3m1!4b1!4m6!3m5!1s0x47e66dea9e35b2c7:0x80f4e2e8e5fd9ca1!8m2!3d48.8756903!4d2.389282!16s% 2Fg%2F120vzky8?entry=ttu">Karte</a>)</td>
 </tr>
 <tr>
 <td>Fotoshooting<br/>(Brautpaar)</td>
 <td>17 Uhr</td>
-<td>Parc des Buttes-Chaumont<br/>75019 Paris (<a href="https://www.google.com/maps/place/Parc+des+Buttes-Chaumont/@48.8809496,2.380186,17z/data=!3m1! 4b1!4m6!3m5!1s0x47e66dc6143ed387:0xf26bed6076959491!8m2!3d48.8809496!4d2.3827609!16zL20vMDVodzM1?entry=ttu">Karte</a>)</td>
+<td>Parc des Buttes-Chaumont<br/>75019 Paris</td>
 </tr>
 <tr>
-<td><strong>Rezeption</strong></td>
-<td><strong>18 Uhr</strong></td>
-<td><strong>Galerie SETZE / LEPARTKING<br/>36 rue Miguel Hidalgo, 75019 Paris</strong> (<a href="https://www.google.com/maps/place/36+Rue+Miguel+Hidalgo,+75019+Paris /@48.8815654,2.3889276,17z/data=!3m1!4b1!4m6!3m5!1s0x47e66dc75f99238f:0x70580508f1d9bc96!8m2!3d48.8815654!4d2.3915025!16s%2Fg% 2F11c29p3102?entry=ttu">Karte</a>)</td>
+<td>Empfang</td>
+<td>18 Uhr</td>
+<td>Galerie SETZE / LEPARTKING<br/>36 rue Miguel Hidalgo, 75019 Paris (<a href="https://www.google.com/maps/place/36+Rue+Miguel+Hidalgo,+75019+Paris /@48.8815654,2.3889276,17z/data=!3m1!4b1!4m6!3m5!1s0x47e66dc75f99238f:0x70580508f1d9bc96!8m2!3d48.8815654!4d2.3915025!16s%2Fg% 2F11c29p3102?entry=ttu">Karte</a>)</td>
 </tr>
 </tbody>
 </table>
 <p><br/>
 <br/></p>
-<h2>Fotoshooting (Braut und Bräutigam) – 9 Uhr</h2>
-<p>Wir beginnen den Tag damit, den Menschenmassen für eine Fotosession in Buttes-Chaumont auszuweichen. Hoffentlich gelingt es dem Fotografen, die Emotionen und die Aufregung des Augenblicks einzufangen!</p>
-<h2>Standesamtliche Trauung (Familie) – 10:30 Uhr</h2>
-<blockquote>
-<p>Im Trausaal des Rathauses des 19. Arrondissements von Paris, 5-7 Place Armand Carrel, 75019 Paris</p>
-</blockquote>
-<p>Im Beisein unserer nahen Familien schließen wir unsere Ehe vor dem französischen Staat ab. Wenn möglich, <strong>zögern Sie nicht, gegen 10:15 Uhr einzutreffen</strong>, um den Einlass zu vereinfachen und uns die Möglichkeit zu geben, ein paar Fotos zu machen!</p>
 <h2>Religiöse Zeremonie – 15:30 Uhr</h2>
 <blockquote>
-<p>In der Kirche Saint Jean-Baptiste de Belleville, 139 Rue de Belleville, 75019 Paris</p>
+<p>In der Kirche Saint Jean-Baptiste de Belleville, 139 Rue de Belleville, 75019 Paris (<a href="https://www.google.com/maps/place/%C3%89glise+Saint-Jean-Baptiste +de+Belleville/@48.8756903,2.3867071,17z/data=!3m1!4b1!4m6!3m5!1s0x47e66dea9e35b2c7:0x80f4e2e8e5fd9ca1!8m2!3d48.8756903!4d2.389282!16s% 2Fg%2F120vzky8?entry=ttu">Karte</a>)</p>
 </blockquote>
 <p>Wir erwarten Sie nur einen Steinwurf vom Bahnhof Jourdain (Linie 11) entfernt zu einem der Höhepunkte des Tages, unserer Vereinigung vor Gott.</p>
-<h2>Fotoshooting (Braut und Bräutigam) – 17:00 Uhr</h2>
+<h2>Fotoshooting (Brautpaar) – 17:00 Uhr</h2>
 <p>Neue Fotosession am Nachmittag zur Vervollständigung der Morgenserie.</p>
 <h2>Empfang – 18:00 Uhr</h2>
 <blockquote>
-<p>In der Kunstgalerie SETZE / LEPARTKING, 36 rue Miguel Hidalgo, 75019 Paris</p>
+<p>In der Kunstgalerie SETZE / LEPARTKING, 36 rue Miguel Hidalgo, 75019 Paris (<a href="https://www.google.com/maps/place/36+Rue+Miguel+Hidalgo,+75019+Paris/@48.8815654,2.3889276,17z/data=!3m1!4b1!4m6!3m5!1s0x47e66dc75f99238f:0x70580508f1d9bc96!8m2!3d48.8815654!4d2.3915025!16s%2Fg%2F11c29p3102?entry=ttu">Karte</a>)</p>
 </blockquote>
 <p>Der Tag endet in der SETZE / LEPARTKING Art Gallery mit einem Cocktail-Dinner und einem wilden Tanzabend. Neben anderen Aktivitäten werden wir die großartige Gelegenheit haben, einige Werke aus der Galerie sowie einige Werke unserer lieben Künstlerfreundin Toni Blue Caro auszustellen!</p>
 <p><br/>
@@ -206,7 +186,7 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " Mariage Rosalie et Benoit ",
+  "name": " Mariage Rosalie et Benoît ",
   "url" : "",
   "image": "",
   "description": ""
